k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-portfolio-deployment
  labels:
    app: my-portfolio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-portfolio
  template:
    metadata:
      # 💥 LINK 1 (SUPER IMPORTANT):
      # Niche jo 'app: my-portfolio' label hai, yeh is Pod ka aadhar card hai.
      # Service.yaml isi label ko dhoondte hue is Pod tak pahonchegi.
      labels:
        app: my-portfolio 
    spec:
      containers:
      # ─── CONTAINER 1: MAIN REACT APP ───
      - name: react-app
        image: farhan091/my-portfolio:204cbe28f78c06445e980305801b67e6943c5d31
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http # Service.yaml ka targetPort is naam se connect hoga
      
      # ─── CONTAINER 2: THE SIDECAR TRANSLATOR ───
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:1.1.0
        # 💥 LINK 2 (INTERNAL FLOW):
        # Yeh container '127.0.0.1:80' use kar raha hai kyunki jab do container ek hi Pod ke andar hote hain,
        # toh wo aapas me localhost par baat kar sakte hain. Yeh seedhe React container ka data khench raha hai.
        args:
        - -nginx.scrape-uri=http://127.0.0.1:80/stub_status
        ports:
        - containerPort: 9113
          # 💥 LINK 3 (PORT DEPENDENCY):
          # Is port ka naam humne 'metrics' rakha hai. 
          # Service.yaml isi naam wale port ko target karegi.
          name: metrics
