k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-portfolio-service
  labels:
    app: my-portfolio
spec:
  type: NodePort # Browser me manual access ke liye aapne NodePort use kiya hai
  selector:
    app: my-portfolio # Yeh line traffic ko direct portfolio pods ki taraf bhejegi
  ports:
    # ─── GATE 1: NORMAL USER TRAFFIC (PORT 80) ───
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080 # Browser me ip:30080 daal kar portfolio khulega
    
    # ─── GATE 2: PROMETHEUS TRAFFIC (PORT 9113) ───
    - name: metrics
      protocol: TCP
      port: 9113
      targetPort: 9113 # 👈 Prometheus internal routing ke liye port 9113 ka VIP gate
