k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-portfolio-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # 🌟 NEW LINE: Traefik ko automatic HTTPS redirect karne ke liye bolna
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd
spec:
  tls:
  - hosts:
    - portfolio-farhan.duckdns.org
    secretName: my-portfolio-tls-secret
  rules:
  - host: portfolio-farhan.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-portfolio-service
            port:
              number: 80
